--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gizele</title>
+    <title>Gisele</title>
     <link rel="icon" type="image/x-icon" href="/images/XOM.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -149,7 +149,7 @@
 
 <body>
     <header>
-        <h1>Gizele</h1>
+        <h1>Gisele</h1>
     </header>
 
     <main>
@@ -195,7 +195,7 @@
 
         <div class="info-map-container">
             <div class="store-info">
-                <h2>Gizele</h2>
+                <h2>Gisele</h2>
                 <p>Ελβετίας 21, Αγ. Παρασκευή 153 42</p>
                 <p>Τηλ: 210 600 0988</p>
                 <div class="social-menu">
